wip: make mdx with components work

--- a/posts/post1.mdx
+++ b/posts/post1.mdx
@@ -1,9 +1,13 @@
 ---
-
 title: 'I am part of a dynamic route'
-
 ---
+
+import { Counter } from './component';
 
 # I am post one
 
 HOW YOU DOING?!
+
+I have components:
+
+<Counter />
